added Create a screen that displays the details of a specific Pokemon | added edit page without functionalities yet

--- a/app/components/Pill/Pill.module.css
+++ b/app/components/Pill/Pill.module.css
@@ -1,6 +1,8 @@
 .pill {
   width: fit-content;
   padding: 0.2rem 1rem;
+  border-radius: 1rem;
+  border: 0.1rem dashed rgb(43, 43, 43);
 }
 
 .pill--normal {
