--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -14,10 +14,12 @@
   border-radius: 1rem;
 }
 
-.overflow {
+.overflow-center {
   background-color: var(--primary-red-color);
   clip-path: polygon(0 0, 100% 0, 90% 100%, 10% 100%);
   width: 15rem;
-  height: 1rem;
+  height: fit-content;
   margin: 0 auto;
+  text-align: center;
+  padding: 0.3rem 0;
 }
