--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   background-color: white;
   width: 16rem;
-  height: 20rem;
+  height: 25rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -14,17 +14,24 @@
 
 .card:hover {
   transform: translateY(-5px);
-  cursor: pointer;
 }
 
-.card-title {
+.card__header {
+  text-align: end;
+}
+
+.card__body {
+  padding: 1rem 0;
+}
+
+.card__title {
   color: black;
   text-align: center;
   padding: 0.3rem 0;
   text-transform: capitalize;
 }
 
-.card-types-container {
+.card__types-container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -33,7 +40,30 @@
   align-items: center;
 }
 
+.card__footer {
+  text-align: center;
+}
+
 .img-wrapper {
   display: flex;
   justify-content: center;
+}
+
+.action-button {
+  border: none;
+  background: none;
+}
+
+.action-button:hover {
+  cursor: pointer;
+  transform: scale(0.9);
+}
+
+.more-link {
+  color: var(--primary-blue-color);
+}
+
+.more-link:hover {
+  cursor: pointer;
+  color: grey;
 }
