--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -29,6 +29,7 @@
   text-align: center;
   padding: 0.3rem 0;
   text-transform: capitalize;
+  word-wrap: break-word;
 }
 
 .card__types-container {
@@ -38,6 +39,7 @@
   gap: 0.4rem;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .card__footer {
