--- a/app/components/Buttons/CircleButton/CircleButton.module.css
+++ b/app/components/Buttons/CircleButton/CircleButton.module.css
@@ -1,7 +1,7 @@
-.circle-btn {
-  width: 1rem;
-  height: 1rem;
-  font-size: 1rem;
+.circleButton {
+  width: 3rem;
+  height: 3rem;
+  font-size: 3rem;
   border-radius: 100%;
   padding: 0.5rem;
   display: inline-flex;
@@ -9,14 +9,14 @@
   align-items: center;
 }
 
-.circle-btn--green {
+.circleButton--green {
   background-color: green;
 }
 
-.circle-btn--red {
+.circleButton--red {
   background-color: red;
 }
 
-.circle-btn:hover {
+.circleButton:hover {
   cursor: pointer;
 }
